--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Austin Barbee's Student Home Page</h1>
-<a href="#">GitHub Pages</a> | 
+<a href="http://csis.svsu.edu/~ambarbee/">GitHub Pages</a> | 
 <a href="#">mDrive</a> | 
 <a href="#">CSIS server</a> 
 <br />
