--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>Austin Barbee's Student Home Page</h1>
-<a href="http://csis.svsu.edu/~ambarbee/">GitHub Pages</a> | 
+<a href="https://buckoftheeye.github.io">GitHub Pages</a> | 
 <a href="#">mDrive</a> | 
-<a href="#">CSIS server</a> 
+<a href="http://csis.svsu.edu/~ambarbee/">CSIS server</a> 
 <br />
 <br />
 <h2>Assignments</h2>
