--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -4,6 +4,142 @@
 <title>Assignment 01</title>
 </head>
 <body>
-<p>Hello, world</p>
+  <table style="margin-left: auto; margin-right: auto; width: 154px;">
+<tbody>
+
+  
+  
+<form>
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname">
+</form>
+  
+  <table style="margin-left: auto; margin-right: auto; width: 154px;">
+<tbody>
+<tr>
+<td style="width: 18px;">&nbsp;1</td>
+<td style="width: 15px;">2</td>
+<td style="width: 15px;">3</td>
+<td style="width: 15px;">4</td>
+<td style="width: 15px;">5</td>
+<td style="width: 15px;">6</td>
+<td style="width: 15px;">7</td>
+<td style="width: 15.8438px;">8</td>
+<td style="width: 14.1562px;">9</td>
+<td style="width: 15px;">10</td>
+</tr>
+<tr>
+<td style="width: 18px;">2</td>
+<td style="width: 15px;">&nbsp;4</td>
+<td style="width: 15px;">6</td>
+<td style="width: 15px;">8</td>
+<td style="width: 15px;">10</td>
+<td style="width: 15px;">12</td>
+<td style="width: 15px;">14</td>
+<td style="width: 15.8438px;">16</td>
+<td style="width: 14.1562px;">18</td>
+<td style="width: 15px;">20</td>
+</tr>
+<tr>
+<td style="width: 18px;">3&nbsp;</td>
+<td style="width: 15px;">6</td>
+<td style="width: 15px;">9</td>
+<td style="width: 15px;">12</td>
+<td style="width: 15px;">15</td>
+<td style="width: 15px;">18</td>
+<td style="width: 15px;">21</td>
+<td style="width: 15.8438px;">24</td>
+<td style="width: 14.1562px;">27</td>
+<td style="width: 15px;">30</td>
+</tr>
+<tr>
+<td style="width: 18px;">4&nbsp;</td>
+<td style="width: 15px;">8</td>
+<td style="width: 15px;">12</td>
+<td style="width: 15px;">16</td>
+<td style="width: 15px;">20</td>
+<td style="width: 15px;">24</td>
+<td style="width: 15px;">28</td>
+<td style="width: 15.8438px;">32</td>
+<td style="width: 14.1562px;">36</td>
+<td style="width: 15px;">40</td>
+</tr>
+<tr>
+<td style="width: 18px;">5&nbsp;</td>
+<td style="width: 15px;">10</td>
+<td style="width: 15px;">15</td>
+<td style="width: 15px;">20</td>
+<td style="width: 15px;">25</td>
+<td style="width: 15px;">30</td>
+<td style="width: 15px;">35</td>
+<td style="width: 15.8438px;">40</td>
+<td style="width: 14.1562px;">45</td>
+<td style="width: 15px;">50</td>
+</tr>
+<tr>
+<td style="width: 18px;">6&nbsp;</td>
+<td style="width: 15px;">12</td>
+<td style="width: 15px;">18</td>
+<td style="width: 15px;">24</td>
+<td style="width: 15px;">30</td>
+<td style="width: 15px;">36</td>
+<td style="width: 15px;">42</td>
+<td style="width: 15.8438px;">48</td>
+<td style="width: 14.1562px;">54</td>
+<td style="width: 15px;">60</td>
+</tr>
+<tr>
+<td style="width: 18px;">7&nbsp;</td>
+<td style="width: 15px;">14</td>
+<td style="width: 15px;">21</td>
+<td style="width: 15px;">28</td>
+<td style="width: 15px;">35</td>
+<td style="width: 15px;">42</td>
+<td style="width: 15px;">49</td>
+<td style="width: 15.8438px;">56</td>
+<td style="width: 14.1562px;">63</td>
+<td style="width: 15px;">70</td>
+</tr>
+<tr>
+<td style="width: 18px;">8&nbsp;</td>
+<td style="width: 15px;">16</td>
+<td style="width: 15px;">24</td>
+<td style="width: 15px;">32</td>
+<td style="width: 15px;">40</td>
+<td style="width: 15px;">48</td>
+<td style="width: 15px;">56</td>
+<td style="width: 15.8438px;">64</td>
+<td style="width: 14.1562px;">72</td>
+<td style="width: 15px;">80</td>
+</tr>
+<tr>
+<td style="width: 18px;">9&nbsp;</td>
+<td style="width: 15px;">18</td>
+<td style="width: 15px;">27</td>
+<td style="width: 15px;">36</td>
+<td style="width: 15px;">45</td>
+<td style="width: 15px;">45</td>
+<td style="width: 15px;">63</td>
+<td style="width: 15.8438px;">72</td>
+<td style="width: 14.1562px;">81</td>
+<td style="width: 15px;">90</td>
+</tr>
+<tr>
+<td style="width: 18px;">10&nbsp;</td>
+<td style="width: 15px;">20</td>
+<td style="width: 15px;">30</td>
+<td style="width: 15px;">40</td>
+<td style="width: 15px;">50</td>
+<td style="width: 15px;">60</td>
+<td style="width: 15px;">70</td>
+<td style="width: 15.8438px;">80</td>
+<td style="width: 14.1562px;">90</td>
+<td style="width: 15px;">100</td>
+</tr>
+</tbody>
+</table>
+<!-- DivTable.com -->
 </body>
 </html>
