--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -4,18 +4,19 @@
 <title>Assignment 01</title>
 </head>
 <body>
-  <table style="margin-left: auto; margin-right: auto; width: 154px;">
-<tbody>
-
+  
+  <img src="images/myimage.jpg">
   
   
-<form>
+ <form>
   <label for="fname">First name:</label><br>
   <input type="text" id="fname" name="fname"><br>
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
 </form>
   
+<table style="margin-left: auto; margin-right: auto; width: 154px;">
+<tbody>
   <table style="margin-left: auto; margin-right: auto; width: 154px;">
 <tbody>
 <tr>
@@ -141,5 +142,6 @@
 </tbody>
 </table>
 <!-- DivTable.com -->
+  
 </body>
 </html>
