--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   
+  <h1>Assignment 01</h1>
+  
    <img src="https://via.placeholder.com/200" />
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
