--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,8 +7,7 @@
   
   <h1>Assignment 01</h1>
   
-   <img src="https://via.placeholder.com/200" />
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+  <p> <img src="https://via.placeholder.com/200" /> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor. 
