--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -11,7 +11,7 @@
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
-    <img src="https://via.placeholder.com/200" ALIGN=”left” />
+    <BR CLEAR=”left” /><img src="https://via.placeholder.com/200" ALIGN=”left” />
     Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
     In eu mi bibendum neque egestas congue. In mollis nunc sed id semper risus in hendrerit gravida. </p>
   
