--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -16,7 +16,7 @@
   
   <h2><b> Sagittis vitae et leo duis ut diam quam nulla. </b> </h2>
   
-  <img src="">
+  <img src="image_2021-09-14_001623.png" style="float:left">
   <p>Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
     Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
     Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
