--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -12,15 +12,39 @@
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
     Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
+    Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
+    Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
+    Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
+    Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
+    Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
+    Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
+    Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
+    Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
+    Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
+    Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
+    Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
+    Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
     In eu mi bibendum neque egestas congue. In mollis nunc sed id semper risus in hendrerit gravida. </p>
   
   <h2><b> Sagittis vitae et leo duis ut diam quam nulla. </b> </h2>
   
-  <img src="image_2021-09-14_001623.png" style="float:left">
+  <img src="https://i.redd.it/xsd7tykmbb371.jpg" style="float:left">
   <p>Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
     Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
     Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
-    Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Tristique risus nec feugiat in fermentum posuere urna nec. </p>
+    Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Tristique risus nec feugiat in fermentum posuere urna nec.
+    Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
+    Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
+    Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
+    Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Tristique risus nec feugiat in fermentum posuere urna nec.
+    Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
+    Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
+    Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
+    Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Tristique risus nec feugiat in fermentum posuere urna nec.
+    Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
+    Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
+    Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
+    Lorem ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Tristique risus nec feugiat in fermentum posuere urna nec.</p>
   
  <form>
   <label for="fname">First name:</label><br>
