--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
 <body>
   
   <h1>Assignment 01</h1>
-  <img src="https://via.placeholder.com/200" style="float:left" />
+  <img src="https://via.placeholder.com/200" style="float:right" />
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
