--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -26,7 +26,7 @@
     Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
     In eu mi bibendum neque egestas congue. In mollis nunc sed id semper risus in hendrerit gravida. </p>
   
-  <h2><b> Sagittis vitae et leo duis ut diam quam nulla. </b> </h2>
+  <h2><b> Sagittis vitae et leo duis ut diam quam nulla. Fusce ut placerat orci nulla pellentesque dignissim enim.</b> </h2>
   
   <img src="https://i.redd.it/xsd7tykmbb371.jpg" style="float:left">
   <p>Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
