--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -7,7 +7,7 @@
   
   <h1>Assignment 01</h1>
   <img src="https://via.placeholder.com/200" style="float:right" />
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+  <p><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
@@ -24,7 +24,7 @@
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
     Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
-    In eu mi bibendum neque egestas congue. In mollis nunc sed id semper risus in hendrerit gravida. </p>
+    In eu mi bibendum neque egestas congue. In mollis nunc sed id semper risus in hendrerit gravida.</code></p>
   
   <h2><b> Sagittis vitae et leo duis ut diam quam nulla. Fusce ut placerat orci nulla pellentesque dignissim enim.</b> </h2>
   
@@ -52,6 +52,44 @@
   <label for="lname">Last name:</label><br>
   <input type="text" id="lname" name="lname">
 </form>
+  
+  <table>
+  <tr>
+    <th>Company</th>
+    <th>Contact</th>
+    <th>Country</th>
+  </tr>
+  <tr>
+    <td>Alfreds Futterkiste</td>
+    <td>Maria Anders</td>
+    <td>Germany</td>
+  </tr>
+  <tr>
+    <td>Centro comercial Moctezuma</td>
+    <td>Francisco Chang</td>
+    <td>Mexico</td>
+  </tr>
+  <tr>
+    <td>Ernst Handel</td>
+    <td>Roland Mendel</td>
+    <td>Austria</td>
+  </tr>
+  <tr>
+    <td>Island Trading</td>
+    <td>Helen Bennett</td>
+    <td>UK</td>
+  </tr>
+  <tr>
+    <td>Laughing Bacchus Winecellars</td>
+    <td>Yoshi Tannamuri</td>
+    <td>Canada</td>
+  </tr>
+  <tr>
+    <td>Magazzini Alimentari Riuniti</td>
+    <td>Giovanni Rovelli</td>
+    <td>Italy</td>
+  </tr>
+</table>
   
 </body>
 </html>
