--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -53,8 +53,7 @@
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
     Lectus sit amet est placerat in egestas erat imperdiet. Sem viverra aliquet eget sit amet tellus cras. Laoreet non curabitur gravida arcu ac tortor.
     Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. Habitant morbi tristique senectus et netus. Sapien et ligula ullamcorper malesuada proin libero nunc. 
-    Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
-    Sagittis vitae et leo duis ut diam quam nulla.</p>
+    Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. </p>
   
  <form>
   <label for="fname">First name:</label><br>
