--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -6,7 +6,7 @@
 <body>
   
   <h1>Assignment 01</h1>
-  <img src="https://via.placeholder.com/200" style="float:right" />
+  <img src="https://via.placeholder.com/200" alt="placeholder" style="float:right"/>
   <p><code>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
     Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Nisl suscipit adipiscing bibendum est ultricies integer quis auctor elit. 
     Sagittis vitae et leo duis ut diam quam nulla. Neque sodales ut etiam sit amet nisl purus in mollis. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend. 
@@ -28,7 +28,7 @@
   
   <h2><b> Sagittis vitae et leo duis ut diam quam nulla. Fusce ut placerat orci nulla pellentesque dignissim enim.</b> </h2>
   
-  <img src="https://i.redd.it/xsd7tykmbb371.jpg" style="float:left">
+  <img src="https://i.redd.it/xsd7tykmbb371.jpg" alt="SadMan" style="float:left">
   <p>Morbi enim nunc faucibus a pellentesque. Consequat ac felis donec et odio pellentesque. Egestas congue quisque egestas diam in arcu cursus euismod. 
     Proin libero nunc consequat interdum varius sit amet. Consequat id porta nibh venenatis cras sed. Purus semper eget duis at tellus at urna. Etiam tempor orci eu lobortis. 
     Aliquet porttitor lacus luctus accumsan tortor posuere ac ut. Ullamcorper sit amet risus nullam eget. Lorem donec massa sapien faucibus et molestie ac feugiat. 
