--- a/assignments/assignment02.html
+++ b/assignments/assignment02.html
@@ -92,7 +92,7 @@
 </ul>
 <hr />
   <p>Table 1. How to turn $48,000 into $1,000,000.</p>
-  <table class="stripey";class="mousey";class="rightey";class="pinkey"; >border="1" width="100%">
+  <table class="stripey mousey rightey pinkey" border="1" width="100%">
 <thead>
   <tr>
     <th>Initial</th>
