--- a/assignments/assignment03/assignment03.html
+++ b/assignments/assignment03/assignment03.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="golfScorecard.css">
+  <script src="golfScorecard.js"></script>
+</head>
+
+ <body>
 <h1>Golf Scorecard</h1>
 <table class="table table-striped">
   <tr id="0">
@@ -142,3 +150,5 @@
   </tr>
 </table>
 
+</body>
+</html>
