--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-7 col-lg-9 text-center">
           <h1>Austin Barbee's CS255 Assignments Homepage</h1>
-          <h2>Please give me all A's</h2>
+          <h2>Grade easy on me!</h2>
         </div>
       </div>
       <div class="text-center">
