--- a/assignments/assignment03/assignment03.html
+++ b/assignments/assignment03/assignment03.html
@@ -1,3 +1,9 @@
+<!-- ------------------------------------------ -->
+<!-- Author: Austin Barbee -->
+<!-- Contact: ambarbee@svsu.edu -->
+<!-- Description: HTML to keep track of golf scores -->
+<!-- ------------------------------------------ -->
+
 <!DOCTYPE html>
 <html>
 <head>
