--- a/assignments/assignment04/partA/clubAbout.html
+++ b/assignments/assignment04/partA/clubAbout.html
@@ -5,7 +5,7 @@
   <body>
   
     <p>ClubMeNow version 1.0.0</p>
-    <input type="button" onclick="https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html;" value="Go back to Club Distance List" />
+    <input type="button" onclick="clubDistanceList.html;" value="Go back to Club Distance List" />
     
   </body>
 </html>
