--- a/assignments/assignment04/assignment04.html
+++ b/assignments/assignment04/assignment04.html
@@ -5,7 +5,7 @@
   <body>
   
     <p>Assignment 4 selector</p>
-    <button onclick="https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html">Part A</button>
+    <button onclick="BuckOfTheEye.github.io/assignments/assignment04/partA/clubMeNow.html">Part A</button>
     <button onclick="https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html">Part B</button>
     
   </body>
