--- a/assignments/assignment04/assignment04.html
+++ b/assignments/assignment04/assignment04.html
@@ -5,8 +5,8 @@
   <body>
   
     <p>Assignment 4 selector</p>
-    <button onclick="BuckOfTheEye.github.io/assignments/assignment04/partA/clubMeNow.html">Part A</button>
-    <button onclick="https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html">Part B</button>
+    <a href="https://buckoftheeye.github.io/assignments/assignment04/partA/clubMeNow.html" class="button">Part A</a>
+    <a href="https://google.com" class="button">Part B</a>
     
   </body>
 </html>
