--- a/assignments/assignment04/partB/partB.html
+++ b/assignments/assignment04/partB/partB.html
@@ -1,3 +1,11 @@
+  
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+
+</head>
+<body>
 <h1>Assignment 04 Exercises</h1>
 
 <h3>1-5. See Canvas. </h3>
@@ -76,3 +84,8 @@
 <div id="form00"></div>
 
 <div id="5B">Your answer here</div>
+	
+<script src="partB.js"></script>
+	
+</body>
+</html>
