--- a/assignments/assignment04/partA/clubAbout.html
+++ b/assignments/assignment04/partA/clubAbout.html
@@ -5,7 +5,7 @@
   <body>
   
     <p>ClubMeNow version 1.0.0</p>
-    <button onclick="https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html">Go Back</button>
+    <input type="button" onclick="location.href='https://buckoftheeye.github.io/assignments/assignment04/partA/clubDistanceList.html';" value="Back" />
     
   </body>
 </html>
